--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1>This Webpage is Currently Under Construction</h1>
 <h2>In the meantime, please defer to one of the following:</h2>
 <p>
-    <a href="psychology/psychology.html">Alzheimers Research</a><br><br>
+    <a href="psychology/index.html">Alzheimers Research</a><br><br>
     <a href="https://hasntgotaname.cf/">Evil Villian</a><br><br>
     <a href="http://stressdetector.tk/">Stress Detector</a><br><br>
 </p>
