--- a/stressdetector/index.html
+++ b/stressdetector/index.html
@@ -29,7 +29,7 @@
             <a class="w3-bar-item w3-button" href="data.html">My Data</a>
             <a class="w3-bar-item w3-button" href="about_me.html">About Me</a>
             <a class="w3-bar-item w3-button" href="tour.html">Take a Tour</a>
-            <a class="w3-bar-item w3-button" href="home.html">Exit Webpage</a>
+            <a class="w3-bar-item w3-button" href="../index.html">Exit Webpage</a>
 
             
         </nav>
