--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <p>
     <a href="psychology/index.html">Alzheimers Research</a><br><br>
     <a href="https://hasntgotaname.cf/">Evil Villian</a><br><br>
-    <a href="http://stressdetector.tk/">Stress Detector</a><br><br>
+    <a href="stressdetector/index.html">Stress Detector</a><br><br>
 </p>
