--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <h2>In the meantime, please defer to one of the following:</h2>
 <p>
     <a href="psychology/index.html">Alzheimers Research</a><br><br>
-    <a href="https://hasntgotaname.cf/">Evil Villian</a><br><br>
+    <a href="evilvillian/index.html">Evil Villian</a><br><br>
     <a href="stressdetector/index.html">Stress Detector</a><br><br>
 </p>
