--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         background-color: whitesmoke;
     }
 </style>
+<title>Jai Matthews</title>
 <h1>This Webpage is Currently Under Construction</h1>
 <h2>In the meantime, please defer to one of the following:</h2>
 <p>
