--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
     <a href="psychology/index.html">Alzheimers Research</a><br><br>
     <a href="evilvillian/index.html">Evil Villian</a><br><br>
     <a href="stressdetector/index.html">Stress Detector</a><br><br>
-    <a href="https://carliandco.cf/">Carli & Co.</a><br><br>
+    <a href="carliandco.cf">Carli & Co.</a><br><br>
 </p>
