--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
     <a href="evilvillian/index.html">Evil Villian</a><br><br>
     <a href="stressdetector/index.html">Stress Detector</a><br><br>
     <a href="https://carliandco.cf">Carli & Co.</a><br><br>
+    <a href="gettingtrashed/index.html">Getting Trashed</a><br><br>
 </p>
