--- a/gettingtrashed/Info.html
+++ b/gettingtrashed/Info.html
@@ -40,11 +40,13 @@
                 <td><a target="_blank" href=https://www.youtube.com/channel/UCChrYVQUtHRYQTBRxjBU6Ow><img src="assets/tyrellupdated-01.png" width="150" height="150"></a></td>
             </tr>
         </table>
+        <div style="text-align: right;">
         <a href="../index.html">
         <h1 class="more_info_bold">Exit Webpage.</h1>
         </a>
         <p class="specunderline2"> </p>
         <p class="specunderline"> </p>
+        </div>
         <br><br>
     </body>
     <footer class="footer"> 
