--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
         <h1>External Websites:</h1>
         <p>Click on any of the links listed below.</p>
         <br>
-        <a href="psychology/index.html">Alzheimer's Research</a>
+        <a href="psychology">Alzheimer's Research</a>
         <br><br>
         <a href="evilvillian/index.html">Evil Villian</a>
         <br><br>
