--- a/shows/index.html
+++ b/shows/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
-<html><head>
-    <meta http-equiv="refresh" content="0; URL=https://docs.google.com/spreadsheets/d/1hGSaa8SAR4rHv_Fj9AGjjsIrWvBTRUitPhbseAgbh4Y/edit" />
-</head></html>
+<iframe src="
+https://docs.google.com/spreadsheets/d/e/2PACX-1vTVTSLNrPEGkzHPrEcu0L0xP_MQhkVqrskUR8spt-tcipz8U7wJoQ0ioilrpHRBOv_IrUYciRCkbY93/pubhtml?widget=true&amp;headers=false
+" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support iframes
+</iframe>
