--- a/mysterynight/info.html
+++ b/mysterynight/info.html
@@ -14,23 +14,21 @@
     </ul>
 </header>
 <html>
-    <div class="body body-small" style="text-align: left;">
-        <br><br><br><br><br><br><br>
-        <h2>General Information</h2>
+    <div class="body body-small" style="text-align: center;">
+        <br><br><br><br>
+        <h2>About Mystery Night</h2>
         <p><i>The Mystery Nights are a series of puzzle-adventures created by Jai Matthews & Aidan de Sousa. Each has an overarching story that we have created and goes through a series of original puzzles and logical challenges. Initially Mystery Night was created for an event at Hawthorn Scouts, though these days it exists outside of these confines. At present, there have been a total of 4 Mystery Nights that released from 2019-2022, the last of which was finished in September 2022.</i></p>
-        <h2>Contact Details</h2>
-        <p style="text-decoration: underline;">Aidan de Sousa:</p>
-        <i>aidan@desousas.com</i>
-        <p style="text-decoration: underline;">Jai Matthews</p>
-        <i>jai.matthews2005@gmail.com</i><br><br>
-        <i>0411 084 353</i>
-        <h2>Links:</h2>
-        <a href="one.html" style="color: black;">Mystery Night 1</a><br><br>
-        <a href="two.html" style="color: black;">Mystery Night 2</a><br><br>
-        <a href="three.html" style="color: black;">Mystery Night 3</a><br><br>
-        <a href="four.html" style="color: black;">Mystery Night 4</a><br><br>
+        <br>
+        <div style="display: inline-block; width: 400px; vertical-align: top;">
+            <p style="text-decoration: underline;">Aidan de Sousa:</p>
+            <i>aidan@desousas.com</i>    
+        </div>
+        <div style="display: inline-block; width: 400px; vertical-align: top;">
+            <p style="text-decoration: underline;">Jai Matthews</p>
+            <i>jai.matthews2005@gmail.com</i><br><br>
+            <i>0411 084 353</i>
+        </div>
 
-        
         <br><br>
     </div>
     <br><br><br><br>
