--- a/about.html
+++ b/about.html
@@ -227,6 +227,13 @@
             <br>
             <table class="about" style="margin: auto;">
                 <tr>
+                    <td width="40%">Visual Changes</td>
+                    <td width="60%">
+                        <i>3 November, 2022</i><br>
+                        Navbar hover effects have been changed, website now uses different shade of blue (or green - it's not important - shut up), website now runs in light mode rather than dark mode.
+                    </td>
+                </tr>
+                <tr>
                     <td width="40%">Major Update<span class="subtext"><br>*Important</span></td>
                     <td width="60%">
                         <i>24 September, 2022</i><br>
@@ -318,7 +325,7 @@
                 <a onclick="loadscreen(3)">News/ Updates</a>
             </div>
             <div style="margin: auto; width: fit-content;">
-            <span style="color: white;"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
+            <span style="color: var(--text);"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
             </div>
             <br><br>
         </div>
