--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p><i>Websites created by Jai Matthews are listed below.</i></p>
         <a href="stressdetector" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_2.png">
+                <img src="assets/web_icon-02.png">
                 <div>
                     <h3>Stress Detector</h3>
                     <p>Created in 2020 by Jai Matthews using w3.css</p>
@@ -27,7 +27,7 @@
         </div></a>
         <a href="evilvillian" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_3.png">
+                <img src="assets/web_icon-03.png">
                 <div>
                     <h3>Evil Villian</h3>
                     <p>Created in 2021 by Jai Matthews</p>
@@ -36,7 +36,7 @@
         </div></a>
         <a href="gettingtrashed" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_4.png">
+                <img src="assets/web_icon-04.png">
                 <div>
                     <h3>Getting Trashed</h3>
                     <p>Created in 2021 by Jai Matthews & Tyrell Carli</p>
@@ -45,7 +45,7 @@
         </div></a>
         <a href="psychology" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_1.png">
+                <img src="assets/web_icon-01.png">
                 <div>
                     <h3>Alzheimer's Research</h3>
                     <p>Created in 2021 by Jai Matthews</p>
@@ -54,7 +54,7 @@
         </div></a>
         <a href="https://carliandco.cf" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_5.png">
+                <img src="assets/web_icon-05.png">
                 <div>
                     <h3>Carli & Co.</h3>
                     <p>Created in 2021 by Jai Matthews, Mark Gurney & Tyrell Carli</p>
@@ -63,7 +63,7 @@
         </div></a>
         <a href="tpc" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_6.png">
+                <img src="assets/web_icon-06.png">
                 <div>
                     <h3>The Password Company</h3>
                     <p>Created in 2022 by Jai Matthews</p>
@@ -72,7 +72,7 @@
         </div></a>
         <a href="mysterynight" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_7.png">
+                <img src="assets/web_icon-07.png">
                 <div>
                     <h3>Mystery Night</h3>
                     <p>Created from 2019 - 2022 by Jai Matthews & Aidan de Sousa</p>
@@ -81,7 +81,7 @@
         </div></a>
         <a href="https://bookabench.jaimatthews.cf/" target="_blank"><div class="website_icon_parent">
             <div class="website">
-                <img src="assets/web_icon_8.png">
+                <img src="assets/web_icon-08.png">
                 <div>
                     <h3>Book-a-Bench</h3>
                     <p>Created in 2022 by Jai Matthews</p>
@@ -90,7 +90,7 @@
         </div></a>
         <a target="_blank"><div class="website_icon_parent" style="cursor: not-allowed;">
             <div class="website">
-                <img src="assets/web_icon_9.png">
+                <img src="assets/web_icon-09.png">
                 <div>
                     <h3>The JaiRell Experience</h3>
                     <p>Not Yet Available</p>
@@ -109,7 +109,7 @@
             <a href="about.html?window=3#scrollto">News/ Updates</a>
         </div>
         <div style="margin: auto; width: fit-content;">
-        <span style="color: white;"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
+        <span style="color: var(--text);"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
         </div>
         <br><br>
     </div>
