--- a/mn.html
+++ b/mn.html
@@ -44,7 +44,7 @@
             <a href="about.html?window=3#scrollto">News/ Updates</a>
         </div>
         <div style="margin: auto; width: fit-content;">
-        <span style="color: white;"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
+        <span style="color: var(--text);"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
         </div>
         <br><br>
     </div>
