--- a/mysterynight/explore.html
+++ b/mysterynight/explore.html
@@ -10,6 +10,7 @@
         <a href="two.html"><li>Two</li></a>
         <a href="three.html"><li>Three</li></a>
         <a href="four.html"><li>Four</li></a>
+        <a href="five.html"><li>Five</li></a>
         <a href="info.html"><li class="end">Info</li></a>
     </ul>
 </header>
@@ -26,7 +27,7 @@
             <a href="two.html"><img src="assets/MN2.png" class="scroll_MN"></a>
             <a href="three.html"><img src="assets/MN3.png" class="scroll_MN"></a>
             <a href="four.html"><img src="assets/MN4.png" class="scroll_MN"></a>
-            <a><img src="assets/MN5.png" class="scroll_MN" style="cursor: not-allowed;"></a>
+            <a href="five.html"><img src="assets/MN5.png" class="scroll_MN"></a>
             <a><img src="assets/MN6.png" class="scroll_MN" style="cursor: not-allowed;"></a>
             <a href="one.html"><img src="assets/MN1.png" class="scroll_MN"></a>
             <a href="two.html"><img src="assets/MN2.png" class="scroll_MN"></a>
