--- a/mysterynight/info.html
+++ b/mysterynight/info.html
@@ -10,6 +10,7 @@
         <a href="two.html"><li>Two</li></a>
         <a href="three.html"><li>Three</li></a>
         <a href="four.html"><li>Four</li></a>
+        <a href="five.html"><li>Five</li></a>
         <a href="info.html"><li class="end selected">Info</li></a>
     </ul>
 </header>
@@ -26,7 +27,7 @@
         <div style="display: inline-block; width: 400px; vertical-align: top;">
             <p style="text-decoration: underline;">Jai Matthews</p>
             <i>jai.matthews2005@gmail.com</i><br><br>
-            <i>0411 084 353</i>
+            <i>jaimatthews.cf</i>
         </div>
 
         <br><br>
