--- a/mysterynight/play.html
+++ b/mysterynight/play.html
@@ -10,6 +10,7 @@
         <a href="two.html"><li id="navbar2">Two</li></a>
         <a href="three.html"><li id="navbar3">Three</li></a>
         <a href="four.html"><li id="navbar4">Four</li></a>
+        <a href="five.html"><li>Five</li></a>
         <a href="info.html"><li class="end">Info</li></a>
     </ul>
 </header>
