--- a/mysterynight/three.html
+++ b/mysterynight/three.html
@@ -10,6 +10,7 @@
         <a href="two.html"><li>Two</li></a>
         <a href="three.html"><li class="selected">Three</li></a>
         <a href="four.html"><li>Four</li></a>
+        <a href="five.html"><li>Five</li></a>
         <a href="info.html"><li class="end">Info</li></a>
     </ul>
 </header>
