--- a/about.html
+++ b/about.html
@@ -227,6 +227,20 @@
             <br>
             <table class="about" style="margin: auto;">
                 <tr>
+                    <td width="40%">TOTK</td>
+                    <td width="60%">
+                        <i>10 February, 2023</i><br>
+                        jaimatthews.cf/totk redirects to in-built countdown
+                    </td>
+                </tr>
+                <tr>
+                    <td width="40%">Countdown</td>
+                    <td width="60%">
+                        <i>10 February, 2023</i><br>
+                        New website: Countdown generator. Can be used to generate a countdown to any date which is toggleable between minutes & days.
+                    </td>
+                </tr>
+                <tr>
                     <td width="40%">Visual Changes</td>
                     <td width="60%">
                         <i>3 November, 2022</i><br>
