--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
                 </div>
             </div>
         </div></a>
+        <a href="countdown" target="_blank"><div class="website_icon_parent">
+            <div class="website">
+                <img src="assets/web_icon-10.png">
+                <div>
+                    <h3>Countdown Generator</h3>
+                    <p>Created in 2023 by Jai Matthews</p>
+                </div>
+            </div>
+        </div></a>
     </div>
     <br><br><br><br>
 </html>
