--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 </div>
             </div>
         </div></a>
-        <a target="_blank"><div class="website_icon_parent" style="cursor: not-allowed;">
+        <a href="jairell" target="_blank"><div class="website_icon_parent">
             <div class="website">
                 <img src="assets/web_icon-09.png">
                 <div>
                     <h3>The JaiRell Experience</h3>
-                    <p>Not Yet Available</p>
+                    <p>Created in 2023 by Jai Matthews & Tyrell Carli</p>
                 </div>
             </div>
         </div></a>
