--- a/mn.html
+++ b/mn.html
@@ -24,7 +24,7 @@
                 <a target="_blank" href="mysterynight/two.html"><img src="mysterynight/assets/MN2.png" class="scroll_MN"></a>
                 <a target="_blank" href="mysterynight/three.html"><img src="mysterynight/assets/MN3.png" class="scroll_MN"></a>
                 <a target="_blank" href="mysterynight/four.html"><img src="mysterynight/assets/MN4.png" class="scroll_MN"></a>
-                <a><img src="mysterynight/assets/MN5.png" class="scroll_MN" style="cursor: not-allowed;"></a>
+                <a target="_blank" href="mysterynight/five.html"><img src="mysterynight/assets/MN5.png" class="scroll_MN"></a>
                 <a><img src="mysterynight/assets/MN6.png" class="scroll_MN" style="cursor: not-allowed;"></a>
                 <a target="_blank" href="mysterynight/one.html"><img src="mysterynight/assets/MN1.png" class="scroll_MN"></a>
                 <a target="_blank" href="mysterynight/two.html"><img src="mysterynight/assets/MN2.png" class="scroll_MN"></a>
