--- a/mysterynight/five.html
+++ b/mysterynight/five.html
@@ -18,20 +18,21 @@
     <div class="body body-small">
         <br><br><br><br><br>
         
-        <img src="assets/MNIcon-11.png" width="100px">
+        <!-- <img src="assets/MNIcon-11.png" width="100px"> -->
         <h1 style="line-height: 0.3">Mystery Night Five</h1>
         <h2 style="line-height: 0.3;">Coming 2023...</h2>
         <i>By Jai Matthews <br>& Aidan de Sousa</i>
         <br><br>
-        <!--
+        
         <div style="height: 600px;">
-            <img src="assets/MN4.png" style="width: 400px; float: left;">
-            <img src="assets/MNIcon-10.png" width="300px" style="margin-top: 100px; filter: drop-shadow(0px 0px 5px black);">
+            <img src="assets/MN5.png" style="width: 400px;">
+            <!-- <img src="assets/MNIcon-10.png" width="300px" style="margin-top: 100px; filter: drop-shadow(0px 0px 5px black);">
             <a><button class="but4" onclick="scrollToItem()">Read More</button></a><br><br>
             <a href="play.html?pageId=4"><button class="but4">How to Play</button></a><br><br>
             <a href="resources.html?pageId=4"><button class="but4">Resources</button></a><br><br>
-            <a href="explore.html"><button class="but4">Other Mystery Nights</button></a><br><br>
+            <a href="explore.html"><button class="but4">Other Mystery Nights</button></a><br><br> -->
         </div>
+        <!--
         <h1 id="more">About Mystery Night Four</h1>
         <table class="mn-table" style="margin: auto; text-align: left;">
             <tr>
