--- a/jairell/index.html
+++ b/jairell/index.html
@@ -26,7 +26,7 @@
     <div class="section b1" id="sec1">
         <br>
         <h1>About Us</h1>
-        <img class="aboutImg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/800px-Image_created_with_a_mobile_phone.png">
+        <img class="aboutImg" src="assets/IMG_3516.jpg">
         <p class="aboutTxt">
             Welcome to the official website for The JaiRell Experience!
             <br><br>
