--- a/about.html
+++ b/about.html
@@ -227,10 +227,17 @@
             <br>
             <table class="about" style="margin: auto;">
                 <tr>
+                    <td width="40%">The JaiRell Experience</td>
+                    <td width="60%">
+                        <i>17 February, 2023</i><br>
+                        Added website for The JaiRell Experience.
+                    </td>
+                </tr>
+                <tr>
                     <td width="40%">TOTK</td>
                     <td width="60%">
                         <i>10 February, 2023</i><br>
-                        jaimatthews.cf/totk redirects to in-built countdown
+                        jaimatthews.cf/totk redirects to in-built countdown.
                     </td>
                 </tr>
                 <tr>
@@ -300,8 +307,6 @@
                     <i>Soon you'll be able to read a behind-the-scenes description for each illustration.</i>
                     <li>Mystery Night 5</li>
                     <i>Coming Soon is Mystery Night 5 (Once we make it!)</i>
-                    <li>The JaiRell Experience</li>
-                    <i>A website for the JaiRell Experience podcast will soon be made available on the launchpad.</i>
                     <li>Illustrations</li>
                     <i>Illustrations #29 and #30 will soon be moved to the website. (#30 is still hasn't been digitised)</i>
                     <li>Mobile Support</li>
