--- a/mysterynight/five.html
+++ b/mysterynight/five.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Mystery Night Four</title>
+<title>Mystery Night Five</title>
 <link rel="icon" type="image/x-icon" href="assets/icon.png">
 <header>
     <ul class="navbar">
