--- a/about.html
+++ b/about.html
@@ -227,6 +227,13 @@
             <br>
             <table class="about" style="margin: auto;">
                 <tr>
+                    <td width="40%">Countdown Update</td>
+                    <td width="60%">
+                        <i>23 February, 2023</i><br>
+                        Fixed slight mathematical error in countdown website. Added 2 new in-built countdowns.
+                    </td>
+                </tr>
+                <tr>
                     <td width="40%">The JaiRell Experience</td>
                     <td width="60%">
                         <i>17 February, 2023</i><br>
@@ -234,17 +241,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td width="40%">TOTK</td>
-                    <td width="60%">
-                        <i>10 February, 2023</i><br>
-                        jaimatthews.cf/totk redirects to in-built countdown.
-                    </td>
-                </tr>
-                <tr>
                     <td width="40%">Countdown</td>
                     <td width="60%">
                         <i>10 February, 2023</i><br>
-                        New website: Countdown generator. Can be used to generate a countdown to any date which is toggleable between minutes & days.
+                        New website: Countdown generator. Can be used to generate a countdown to any date which is toggleable between minutes & days. Tears of the Kingdom coutdown is in-built.
                     </td>
                 </tr>
                 <tr>
