--- a/mysterynight/play.html
+++ b/mysterynight/play.html
@@ -110,7 +110,7 @@
             <br><br>
             <p><b>Mystery Night 4 App</b></p>
             <p>Please note the Mystery Night 4 Web App is of no use without additional access to documents, materials, and instructions. Please attain all of these before using the web app.</p>
-            <a href="play/MNIV/index.html"><button class="but4">Open.</button></a>
+            <a href="../MNIV/index.html"><button class="but4">Open.</button></a>
         </div>
     </div>
     <br><br><br><br>
