--- a/mn.html
+++ b/mn.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="styles.css">
+<link id="colour" rel="stylesheet" href="light.css">
 <title>Mystery Night</title>
 <link rel="icon" type="image/x-icon" href="assets/iconR-01.png">
 <html>
-    <img src="assets/iconR-01.png" class="logo">
+    <img src="assets/iconR-01.png" id="logoMain" class="logo">
     <br>
     <header>
-        <a href="index.html"><div>Launchpad</div></a>
-        <a href="ai.html"><div>Illustrations</div></a>
-        <a href="mn.html"><div class="selected">Mystery Night</div></a>
-        <a href="temp.html"><div>???</div></a>
-        <a href="about.html"><div>More Info</div></a>
+        <a class="linkto" href="index.html"><div>Launchpad</div></a>
+        <a class="linkto" href="ai.html"><div>Illustrations</div></a>
+        <a class="linkto" href="mn.html"><div class="selected">Mystery Night</div></a>
+        <a class="linkto" href="temp.html"><div>???</div></a>
+        <a class="linkto" href="about.html"><div>More Info</div></a>
     </header>
     <br><br><br>
     <div class="body">
@@ -38,15 +39,18 @@
 <footer>
     <div class="footer">
         <div style="margin: auto; width: fit-content" class="footerLinks">
-            <a href="about.html?window=0#scrollto">Terms & Conditions</a>
-            <a href="about.html?window=1#scrollto">Sitemap</a>
-            <a href="about.html?window=2#scrollto">Contact</a>
-            <a href="about.html?window=3#scrollto">News/ Updates</a>
+            <a class="footerlink" href="about.html?window=0#scrollto">Terms & Conditions</a>
+            <a class="footerlink" href="about.html?window=1#scrollto">Sitemap</a>
+            <a class="footerlink" href="about.html?window=2#scrollto">Contact</a>
+            <a class="footerlink" href="about.html?window=3#scrollto">News/ Updates</a>
         </div>
         <div style="margin: auto; width: fit-content;">
         <span style="color: var(--text);"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
         </div>
         <br><br>
+    </div>
+    <div style="margin: auto; width: fit-content"class="footerLinks">
+        <a id="webToggle" onclick="toggleTheme()">View Legacy Website</a>
     </div>
 </footer>
 <script src="script.js"></script>
