--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <button id="b0" onclick="loadscreen(0)" class="button_2"><i class="fa fa-book"></i> Terms & Conditions</button>
             <button id="b1" onclick="loadscreen(1)" class="button_2"><i class="fa fa-map"></i> Site Map</button>
             <button id="b2" onclick="loadscreen(2)" class="button_2"><i class="fa fa-envelope"></i> Contact</button><br>
-            <button id="b3" onclick="loadscreen(3)" class="button_2"><i class="fa fa-wrench"></i> News/ Updates</button>
+            <button id="b3" onclick="loadscreen(3)" class="button_2"><i class="fa fa-wrench"></i> Changelog</button>
             <button id="b4" onclick="loadscreen(4)" class="button_2"><i class="fa fa-question"></i> Still to Come</button>
             <button id="b5" onclick="loadscreen(5)" class="button_2"><i class="fa fa-youtube-play"></i> Youtube Page</button>
         </div>
@@ -231,7 +231,7 @@
             <br>
         </div>
         <div class="more_info" id="s3">
-            <h4>News/ Updates</h4>
+            <h4>Changelog</h4>
             <br>
             <table class="about" style="margin: auto;">
                 <tr>
@@ -352,7 +352,7 @@
                 <a onclick="loadscreen(0)">Terms & Conditions</a>
                 <a onclick="loadscreen(1)">Sitemap</a>
                 <a onclick="loadscreen(2)">Contact</a>
-                <a onclick="loadscreen(3)">News/ Updates</a>
+                <a onclick="loadscreen(3)">Changelog</a>
             </div>
             <div style="margin: auto; width: fit-content;">
             <span style="color: var(--text);"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
