--- a/illustration.html
+++ b/illustration.html
@@ -60,7 +60,7 @@
             <a class="footerlink" href="about.html?window=0#scrollto">Terms & Conditions</a>
             <a class="footerlink" href="about.html?window=1#scrollto">Sitemap</a>
             <a class="footerlink" href="about.html?window=2#scrollto">Contact</a>
-            <a class="footerlink" href="about.html?window=3#scrollto">News/ Updates</a>
+            <a class="footerlink" href="about.html?window=3#scrollto">Changelog</a>
         </div>
         <div style="margin: auto; width: fit-content;">
         <span style="color: var(--text);"><i>Jai Matthews, 2022</i> ⋅ </span><a onclick="topFunction()" id="myBtn" style="text-decoration: underline;">Back to Top</a>
