--- a/mysterynight/five.html
+++ b/mysterynight/five.html
@@ -20,7 +20,7 @@
         
         <!-- <img src="assets/MNIcon-11.png" width="100px"> -->
         <h1 style="line-height: 0.3">Mystery Night Five</h1>
-        <h2 style="line-height: 0.3;">VROOM-VROOM MACHINE 5 + 1</h2>
+        <h2 style="line-height: 0.3;">Coming Soon...</h2>
         <i>By Jai Matthews <br>& Aidan de Sousa</i><br>
         <br><br>
         
