wishing well button

--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
                 </div>
             </div>
         </div></a>
+        <a target="_blank" style="cursor: not-allowed;"><div class="website_icon_parent">
+            <div class="website">
+                <img src="assets/web_icon-11.png">
+                <div>
+                    <h3>Bottom of the Wishing Well</h3>
+                    <p>Not Yet Available</p>
+                </div>
+            </div>
+        </div></a>
     </div>
     <br><br><br><br>
 </html>
