Countdown Edit, Hores Button

--- a/about.html
+++ b/about.html
@@ -235,6 +235,13 @@
             <br>
             <table class="about" style="margin: auto;">
                 <tr>
+                    <td width="40%">Small Changes</td>
+                    <td width="60%">
+                        <i>29 April, 2023</i><br>
+                        Added new button to launchpad, which is locked at present. Added final date to countdown menu positioned at bottom right.
+                    </td>
+                </tr>
+                <tr>
                     <td width="40%">Dark Mode</td>
                     <td width="60%">
                         <i>2 March, 2023</i><br>
