Writing section put on hold

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <p class="date">Date</p>
         </div></a>
-        <a href="annualgame.html"><div class="link _text">
+        <a href=""><div class="link _text">
             <img src="assets/The-Art-of-The-Legend-of-Zelda-Breath-of-the-Wild-3.jpg">
             <div class="topText">
                 <h1>An Annual Game</h1>
@@ -127,7 +127,7 @@
             </div>
             <p class="date">X May 2023</p>
         </div></a> -->
-        <!-- <a href="rp.html"><div class="link _text">
+        <!-- <a href=""><div class="link _text">
             <img src="assets/zelda.png">
             <div class="topText">
                 <h1>Women in Video Games</h1>
@@ -135,14 +135,17 @@
             </div>
             <p class="date">25 Nov 2022</p>
         </div></a> -->
-        <a href="hasntgotaname.html"><div class="link _text">
+        <!-- <a href="hasntgotaname.html"><div class="link _text">
             <img src="assets/kettle.png" class="top">
             <div class="topText">
                 <h1>Evil Villain</h1>
                 <p>Fiction</p>
             </div>
             <p class="date">18 Jun 2021</p>
-        </div></a>
+        </div></a> -->
+        <div class="_text">
+            <p>This section is under development. Check back soon!</p>
+        </div>
 
 
         <a href="illustrations.html"><div class="link _misc">
