Oops. I forgot to update the changelog!

--- a/changelog.html
+++ b/changelog.html
@@ -22,8 +22,8 @@
         <h2>jaimatthews.cf</h2>
 
         <h3>New Website<span></span></h3>
-        <h5>X May, 2023</h5>
-        <p>Website has been re-done from the ground up. You can now navigate projects based on category on home page. Illustrations & Mystery Night pages have been moved to a project accessible from the home page. About page removed, but most of its features are available in the footer. Added three new projects; 'A', 'B', and 'C'. The website is now mobile compatible.</p>
+        <h5>13 May, 2023</h5>
+        <p>Website has been re-done from the ground up. You can now navigate projects based on category on home page. Illustrations & Mystery Night pages have been moved to a project accessible from the home page. About page removed, but most of its features are available in the footer. Added new project; 'Balls' available in 'Toys and Games' section. The website is now mobile compatible.</p>
 
         <h3>Small Changes</h3>
         <h5>29 April, 2023</h5>
