Another bug fixed on home page

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <p class="date">18 Jun 2021</p>
         </div></a> -->
-        <div class="_text">
+        <div id="thingy">
             <p>This section is under development. Check back soon!</p>
         </div>
 
