some random stuff
mn5, rp, evil villain etc.

--- a/changelog.html
+++ b/changelog.html
@@ -21,6 +21,10 @@
         <h1>Change Log</h1>
         <h2>jaimatthews.cf</h2>
 
+        <h3>Written Stuff</h3>
+        <h5>7 Aug, 2023</h5>
+        <p>Two written pieces have been added to my website in the 'writing' section; Evil Villain & Women in Video Games. Both of these are school projects and are now available online.</p>
+
         <h3>New Website<span></span></h3>
         <h5>13 May, 2023</h5>
         <p>Website has been re-done from the ground up. You can now navigate projects based on category on home page. Illustrations & Mystery Night pages have been moved to a project accessible from the home page. About page removed, but most of its features are available in the footer. Added new project; 'Balls' available in 'Toys and Games' section. The website is now mobile compatible.</p>
