--- a/mysterynight/explore.html
+++ b/mysterynight/explore.html
@@ -28,11 +28,11 @@
             <a href="three.html"><img src="assets/MN3.png" class="scroll_MN"></a>
             <a href="four.html"><img src="assets/MN4.png" class="scroll_MN"></a>
             <a href="five.html"><img src="assets/MN5.png" class="scroll_MN"></a>
-            <a><img src="assets/MN6.png" class="scroll_MN" style="cursor: not-allowed;"></a>
             <a href="one.html"><img src="assets/MN1.png" class="scroll_MN"></a>
             <a href="two.html"><img src="assets/MN2.png" class="scroll_MN"></a>
             <a href="three.html"><img src="assets/MN3.png" class="scroll_MN"></a>
-            <a><img src="assets/MN4.png" class="scroll_MN" style="cursor: not-allowed;"></a>
+            <a href="four.html"><img src="assets/MN4.png" class="scroll_MN"></a>
+            <a href="five.html"><img src="assets/MN5.png" class="scroll_MN"></a>
         </div>
         <div class="scroll_button_parent" id="right">
             <i class="fa fa-arrow-right scroll_button_icon" style="font-size: 20px; line-height: 500px;"></i>
