--- a/smo.html
+++ b/smo.html
@@ -55,7 +55,7 @@
     }
 </style>
 <body>
-    <h1>Super Mario Odyssey Speedrun</h1>
+    <h1>Super Mario Odyssey</h1>
     <h2 id="timer">00:00:00:00</h2>
     <div class="events">
         <div class="past">
@@ -253,7 +253,7 @@
 
         hr = Math.floor(gap/3600000).toString().padStart(2, '0')
 
-        document.getElementById('timer').innerText = hr + ":" + min + ":" + s + ":" + ms
+        document.getElementById('timer').innerText = hr + ":" + min + ":" + s + "." + ms
 
     }
 
