--- a/index.html
+++ b/index.html
@@ -114,37 +114,37 @@
         <!-- <a href=""><div class="link _text">
             <img src="">
             <div class="topText">
-                <h1>Pending</h1>
-                <p>Mathematics</p>
-            </div>
-            <p class="date">Date</p>
-        </div></a>
-        <a href=""><div class="link _text">
-            <img src="assets/The-Art-of-The-Legend-of-Zelda-Breath-of-the-Wild-3.jpg">
-            <div class="topText">
-                <h1>An Annual Game</h1>
+                <h1>C</h1>
                 <p>Gaming</p>
             </div>
-            <p class="date">X May 2023</p>
+            <p class="date">Date</p>
         </div></a> -->
         <!-- <a href=""><div class="link _text">
+            <img src="">
+            <div class="topText">
+                <h1>I</h1>
+                <p>Math</p>
+            </div>
+            <p class="date">Date</p>
+        </div></a> -->
+        <a href="rp.html"><div class="link _text">
             <img src="assets/zelda.png">
             <div class="topText">
                 <h1>Women in Video Games</h1>
-                <p>Gaming</p>
+                <p>Research Project</p>
             </div>
             <p class="date">25 Nov 2022</p>
-        </div></a> -->
-        <!-- <a href="hasntgotaname.html"><div class="link _text">
+        </div></a>
+        <a href="hasntgotaname.html"><div class="link _text">
             <img src="assets/kettle.png" class="top">
             <div class="topText">
                 <h1>Evil Villain</h1>
-                <p>Fiction</p>
+                <p>Biography</p>
             </div>
             <p class="date">18 Jun 2021</p>
-        </div></a> -->
+        </div></a>
         <div id="thingy">
-            <p>This section is under development. Check back soon!</p>
+            <!-- <p>This section is under development. Check back soon!</p> -->
         </div>
 
 
